--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
+        "php": ">=5.5.9",
         "illuminate/contracts": "~5"
     },
     "autoload": {
