--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "pingpong/confirmation",
     "description": "Laravel 5 Confirmation",
-    "license": "BS3-Clause",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Pingpong Labs",
